# dynamic-modules-examples

./: .gitignore  CODEOWNERS  Dockerfile  ENVOY_VERSION  Makefile  README.md  docker-compose.yaml
.github/workflows/: commit.yaml
go/: README.md  delay.go  go.mod  go.sum  header_auth.go  javascript.go  javascript_test.go  main.go  mock_test.go  passthrough.go
go/gosdk/: abi.go  cgoflags.go  gosdk.go  mem.go
integration/: envoy.yaml  go.mod  go.sum  main_test.go
java/: Makefile
java/src/io/envoyproxy/dynamicmodules/: EnvoyHttpFilter.java  ExampleFilter.java  HeaderMutation.java
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: http_access_logger.rs  http_header_mutation.rs  http_java_filter.rs  http_metrics.rs  http_passthrough.rs  http_random_auth.rs  http_zero_copy_regex_waf.rs  lib.rs  listener_ip_allowlist.rs  listener_tls_detector.rs  network_echo.rs  network_protocol_logger.rs  network_rate_limiter.rs  network_redis.rs  passthrough.rs
rust/src/dns_gateway/: README.md  cache_lookup.rs  config.rs  dns_gateway.proto  mod.rs  proto.rs  virtual_ip_cache.rs
