
[package]
name = "envoy-proxy-dynamic-modules-rust-sdk-examples"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/dynamic-modules-example"

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "6d9bb7d9a85d616b220d1f8fe67b61f82bbdb8d3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
matchers = "0.2.0"

[dev-dependencies]
tempfile = "3.16.0"

[lib]
name = "rust_module"
path = "src/lib.rs"
crate-type = ["cdylib"]
